--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     <section id="slide">
       <div class="slide_contents">
         <ul class="slide_contents--images slider">
-          <li><img src="/img/country01.png" alt=""></li>
+          <li><img src="img/country01.png" alt=""></li>
           <li><img src="img/country02.png" alt=""></li>
           <li><img src="img/country03.png" alt=""></li>
           <li><img src="img/country04.png" alt=""></li>
@@ -280,7 +280,7 @@
           infinite: true,
           slidesToShow: 3,
           slidesToScroll: 3,
-          autoplay: false, //自動でスクロール
+          autoplay: true, //自動でスクロール
           autoplaySpeed: 0, //自動再生のスライド切り替えまでの時間を設定
           speed: 5000, //スライドが流れる速度を設定
           cssEase: "linear", //スライドの流れ方を等速に設定
