--- a/index.html
+++ b/index.html
@@ -205,10 +205,11 @@
           <div class="earth_box">
             <div class="earth planet earth_shape"></div>
           </div>
-          <!-- <button v-on:click="addToCart">Add to cart</button>
+          
+          <button v-on:click="addToCart">Add to cart</button>
           <div class="cart">
             <p>Cart({{ cart }})</p>
-          </div> -->
+          </div>
 
         </div>
 
